pull in roster-refactor
