# src/Hedwig/ClientApp/src/OAS-generated/apis/HedwigApi.ts
@@ -1,5 +1,5 @@
-/* tslint:disable */
-/* eslint-disable */
+// tslint:disable
+// eslint-disable
 /**
  * Hedwig API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
@@ -21,6 +21,9 @@ import {
     Enrollment,
     EnrollmentFromJSON,
     EnrollmentToJSON,
+    ProblemDetails,
+    ProblemDetailsFromJSON,
+    ProblemDetailsToJSON,
     Site,
     SiteFromJSON,
     SiteToJSON,
@@ -70,6 +73,8 @@ export interface ApiOrganizationsOrgIdSitesSiteIdEnrollmentsGetRequest {
     orgId: number;
     siteId: number;
     include?: Array<string>;
+    startDate?: Date;
+    endDate?: Date;
 }
 
 export interface ApiOrganizationsOrgIdSitesSiteIdEnrollmentsIdGetRequest {
@@ -414,6 +419,14 @@ export class HedwigApi extends runtime.BaseAPI {
 
         if (requestParameters.include) {
             queryParameters['include'] = requestParameters.include;
+        }
+
+        if (requestParameters.startDate !== undefined) {
+            queryParameters['startDate'] = (requestParameters.startDate as any).toISOString();
+        }
+
+        if (requestParameters.endDate !== undefined) {
+            queryParameters['endDate'] = (requestParameters.endDate as any).toISOString();
         }
 
         const headerParameters: runtime.HTTPHeaders = {};
